# fairness

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  requirements.txt
bayesian/: inference.py  learn.py  modifiers.py
data/preprocessed_data/: UCI_Credit_Card.csv  bank_marketing.csv  compas-scores-two-years-violent.csv  compas-scores-two-years.csv  crimedata.csv  dutch_census_2001.csv  german_credit_complete.csv  law_bar_pass_prediction.csv  studentInfo_OULAD.csv  student_mat.csv  student_por.csv
datasets/: data.py  processing.py  utils.py
metrics/: evaluate.py  fairness.py
mrf/inference/: VE.py  ordering.py
mrf/network/: builder.py  utils.py
visualization/: bayesnet.py  metrics.py  utils.py
